# strassen3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
MatrixFileGenerator/: CMakeLists.txt  matrixFileGenerator.cpp
app/: CMakeLists.txt  app.cpp
samples/: 100x100_1.txt  100x100_2.txt  A.txt  B.txt  float-parse.txt
strassen3/: CMakeLists.txt  matrix.h  strassen3.cpp  strassen3.h
tests/: CMakeLists.txt  correctness-check.sh  tests.cpp
tests_visualization/: plots.ipynb
tests_visualization/tests_data/: test2_32.xlsx  test3_32.xlsx
